--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,10 @@
 {
-  "extends": [
-    "eslint:recommended",
-    "next/core-web-vitals"
-  ],
+  "env": {
+    "browser": true,
+    "es2021": true,
+    "node": true
+  },
+  "extends": ["eslint:recommended", "next/core-web-vitals"],
   "rules": {
     "react/prop-types": "off",
     "no-unused-vars": "warn"
